[metadata]
name = sphinxcontrib-scm
project_urls =
	GitHub: repo = https://github.com/sphinx-contrib/scm
	GitHub: issues = https://github.com/sphinx-contrib/scm/issues
download_url = http://pypi.python.org/pypi/sphinxcontrib-scm
license = GPL-3.0-or-later
license_files = LICENSE
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
description = Sphinx SCM interface
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Environment :: Web Environment
	Framework :: Sphinx :: Extension
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Documentation
	Topic :: Utilities

[aliases]
release = egg_info -RDb '' register bdist_egg sdist upload

[options]
include_package_data = True
install_requires =
	gitpython>=3.1.8
	Sphinx>=1.8
package_dir =
	= src
packages = find_namespace:
platforms = any
python_requires = >=3.7
setup_requires =
	setuptools_scm>=4.1
zip_safe = False

[options.packages.find]
where = src
