[metadata]
name = sphinxcontrib_scm
description = Sphinx SCM interface
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sphinx-contrib/scm
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/sphinxcontrib-scm
project_urls =
    GitHub: repo = https://github.com/sphinx-contrib/scm
    GitHub: issues = https://github.com/sphinx-contrib/scm/issues

[options]
packages = find_namespace:
install_requires =
    Sphinx>=1.8
    gitpython>=3.1.8
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
platforms = any
setup_requires =
    setuptools-scm>=4.1
zip_safe = False

[options.packages.find]
where = src

[aliases]
release = check -rs sdist bdist_wheel
